2005-08-12  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Fix platform SDK compiler config, even latest
	version that announce to be similar to .Net 2005 beta do not throw bad_alloc
	from the new operator.

	* build/Makefiles/nmake/vc8.mak: removed /RTC1 compiler option, the platform
	SDK compiler do not support it. STLport users will just have to activate it
	by themself if they want to.

	* stlport/cstdio, cstdlib: Replaced some _WIN64 checks by a
	_STLP_USING_PLATFORM_SDK_COMPILER check.

	* test/unit/cmath_test.cpp: Complete test filtering for Microsoft platform SDK
	compiler.

2005-08-14  Petr Ovtchenkov  <ptr@island...>

	* test/unit/locale_test.cpp: tests for time_get facet.

	* stlport/stl/_time_facets.c: fix processing of %p format
	[12:00 PM ~ 12:00, 12:00 AM ~ 00:00].

	* src/time_facets.cpp: substitute expanded equivalent format strings
	instead of %T, %R, %r.

	* stlport/pthread.h: Fix C++ comment in a potentially C header. Thanks Ali

2005-08-11  Francois Dumont  <dums@stlport...>

	* stlport/stl_user_config.h: Add _STLP_USING_PLATFORM_SDK_COMPILER so that
	STLport user can signal they are using platform SDK compiler.

	* stlport/config/stl_msvc.h: Add use of _STLP_USING_PLATFORM_SDK_COMPILER.

	* test/unit/cmath_test.cpp, valarray_test.cpp: Removed tanh calls when using
	AMD 64 platform SDK compiler, looks like they miss something...

2005-08-09  Francois Dumont  <dums@stlport...>

	* src/fstream.cpp: Final fix of basic_filebuf::open method. Now when open
	from a Win32 handle the file will be concidered as in binary access with no
	append action.

2005-08-08  Francois Dumont  <dums@stlport...>

	* src/fstream.cpp: Fix annoying 64 warning and basic_filebuf::open method
	from a low level file descriptor or from an HANDLE (not yet complete).
	Thanks Yves Maliet report.

2005-08-07  Francois Dumont  <dums@stlport...>

	* test/unit/inner_product.cpp: Fix 64 bits portability warning.
